--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Erotic stories'
+- GITenberg
 title: 'Forbidden Fruit
 
   Luscious and exciting story and More forbidden fruit or
